--- a/src/index.twig
+++ b/src/index.twig
@@ -13,9 +13,8 @@
     </head>
     <body>
         {% include './partials/gtm-noscript.html' %}
-        <div id="app" class="theme--red">
+        <div id="app" class="uyendo">
             {% include './pages/landing.twig' %}
-            {% include './partials/footer.twig' %}
         </div>
     </body>
 </html>
