--- a/src/pages/landing.twig
+++ b/src/pages/landing.twig
@@ -57,10 +57,8 @@
                         <img class="" src="~@images/maychaybo_text.png" alt="Logo">
                     </figure>
                     <figure class="right">
-                        <img class="award" src="~@images/maychaybo_image.png" alt="Logo">
-                        {#
-                        <img class="award" src="~@images/maychaybo-no-star.png" alt="Logo">
-                        #}
+                        <img class="foot" src="~@images/foot.png" alt="Logo">
+                        <img class="award" src="~@images/may-chay-bo.png" alt="Logo">
                     </figure>
                 </div>
                 <div class="wrap" id="xe-dap">
@@ -68,6 +66,7 @@
                         <img class="" src="~@images/xe-dap-text.png" alt="Logo">
                     </figure>
                     <figure class="right">
+                        <img class="foot" src="~@images/foot.png" alt="Logo">
                         <img class="award" src="~@images/xe-dap.png" alt="Logo">
                     </figure>
                 </div>
@@ -76,6 +75,7 @@
                         <img class="" src="~@images/nem-1-text.png" alt="Logo">
                     </figure>
                     <figure class="right">
+                        <img class="foot" src="~@images/foot.png" alt="Logo">
                         <img class="award" src="~@images/nem-1.png" alt="Logo">
                     </figure>
                 </div>
@@ -84,6 +84,7 @@
                         <img class="" src="~@images/nem-2-text.png" alt="Logo">
                     </figure>
                     <figure class="right">
+                        <img class="foot" src="~@images/foot.png" alt="Logo">
                         <img class="award" src="~@images/nem-2.png" alt="Logo">
                     </figure>
                 </div>
