--- a/src/assets/scss/_uyendo.scss
+++ b/src/assets/scss/_uyendo.scss
@@ -64,9 +64,6 @@ img {
     bottom: 14%;
     transform: translateX(-50%);
 }
-.foot{
-
-}
 .main-content {
     .wrap {
         display: none;
@@ -102,6 +99,7 @@ img {
     font-size: 2.1em;
     width: auto !important;
     line-height: normal;
+    margin-top: 1em !important;
 }
 .step-2-logo {
     max-width: 20%;
