--- a/src/pages/landing.twig
+++ b/src/pages/landing.twig
@@ -6,9 +6,9 @@
             </span>
         </button>
         <button class="icon-button icon-button--small" id="settings-button">
-            <span class="red big">
+            {# <span class="red big">
                 {% include '../assets/images/settings.svg' %}
-            </span>
+            </span> #}
         </button>
     </div>
     <div class="settings" id="settings">
