--- a/src/assets/scss/_uyendo.scss
+++ b/src/assets/scss/_uyendo.scss
@@ -110,7 +110,7 @@ img {
     height: auto;
     background: none;
     box-shadow: none;
-    width: 80%;
+    // width: 80%;
 }
 .slot__inner {
     background: linear-gradient(180deg, #ffffff73 0%, #ffffff21 100%);
