--- a/src/pages/landing.twig
+++ b/src/pages/landing.twig
@@ -52,7 +52,7 @@
                 <img class="title" src="~@images/logo.png" alt="Logo">
             </div>
             <div class="main-content">
-                <div class="wrap" id="may-chay-bo">
+                <div class="wrap active" id="may-chay-bo">
                     <figure class="left">
                         <img class="" src="~@images/maychaybo_text.png" alt="Logo">
                     </figure>
