ver 2 1. Cái chổ tên quay số minh show dạng code - name. VD : 001 - Leo Leong 2. Flow đang là 2 screen mình bỏ screen đầu đi chỉ cần screen quay số thôi ( bỏ nhớ backup dùm a) 3. Khi quay ra người trúng giả có cái vòng xoay trắng quaynh tên người thăng giải mình hide nó đi giúp a 4. Tăng tg quay số thêm tầm 15s cái này như a note ở trên mình tăng cái MAX_REEL_ITEMS lên thử xem hiện tại có 40 ahh tăng lên tầm gấp đôi đi rôi check lại time

--- a/src/assets/scss/_slot.scss
+++ b/src/assets/scss/_slot.scss
@@ -114,17 +114,17 @@
   position: relative;
   z-index: $z-index-draw-button; // make sure draw button on top of sunburst
 
-  @each $media-query, $factor in $scale-factors {
-    @media #{$media-query} {
-      width: $draw-button-width * $factor;
-      margin: $draw-button-margin-top * $factor 0 0;
-      font-size: max((1.75rem * $factor), 1rem);
-      line-height: max((1.75rem * $factor), 1rem);
-      padding: 1rem * $factor 0.625rem * $factor;
-      border-radius: 0.625rem * $factor;
-      @include shadow('large', $factor);
-    }
-  }
+  // @each $media-query, $factor in $scale-factors {
+  //   @media #{$media-query} {
+  //     width: $draw-button-width * $factor;
+  //     margin: $draw-button-margin-top * $factor 0 0;
+  //     font-size: max((1.75rem * $factor), 1rem);
+  //     line-height: max((1.75rem * $factor), 1rem);
+  //     padding: 1rem * $factor 0.625rem * $factor;
+  //     border-radius: 0.625rem * $factor;
+  //     @include shadow('large', $factor);
+  //   }
+  // }
 }
 
 .settings {
@@ -202,7 +202,7 @@
   margin: -50vh 0 0 -50vw;
   width: 100vw;
   height: 100vh;
-  display: none;
+  display: none !important; 
   z-index: $z-index-sunburst;
   pointer-events: none;
   overflow: hidden;
