--- a/src/pages/landing.twig
+++ b/src/pages/landing.twig
@@ -111,7 +111,7 @@
                         <img src="~@images/sunburst.svg" alt="sunburst">
                     </div>
                 </div>
-                <button class="solid-button button-custom" id="draw-button">Quay Số</button>
+                <button class="solid-button button-custom" id="draw-button">Bắt đầu</button>
             </div>
         </div>
     </div>
